home page: projects section/ hover states

--- a/src/components/common/NavList/navlist.css
+++ b/src/components/common/NavList/navlist.css
@@ -5,8 +5,13 @@
   font-size: 14px;
   line-height: 14px;
   letter-spacing: 2px;
+  color: var(--color-dark-grey);
 }
 
 .nav__list-item {
   margin-left: 2.625rem;
+}
+
+.nav__list-item:hover {
+  text-decoration-line: underline;
 }
