--- a/src/components/common/logo-light/logolight.css
+++ b/src/components/common/logo-light/logolight.css
@@ -1,4 +1,9 @@
 .logo-light {
   width: 196px;
   height: 24px;
+  transition: all 0.4s ease-in-out;
+}
+
+.logo-light:hover {
+  transform: scale(0.85, 0.85);
 }
