removing leaf from values section

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -89,7 +89,7 @@
 
 .home-values__container {
   display: flex;
-  background: url("../../assets/shared/desktop/bg-pattern-leaf.svg") no-repeat;
+  /* background: url("../../assets/shared/desktop/bg-pattern-leaf.svg") no-repeat; */
 }
 
 .home-values__card {
