--- a/src/components/common/nav/nav.css
+++ b/src/components/common/nav/nav.css
@@ -4,3 +4,9 @@
   align-items: center;
   margin-bottom: 67px;
 }
+
+@media only screen and (max-width: 768px) {
+  .nav {
+    margin-bottom: 64px;
+  }
+}
