--- a/src/components/home-header/homeheader.css
+++ b/src/components/home-header/homeheader.css
@@ -57,6 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 
 .home-header__link:hover {
@@ -69,4 +70,27 @@
   position: absolute;
   right: -90px;
   top: -30px;
+}
+
+@media only screen and (max-width: 768px) {
+  .home-header {
+    text-align: center;
+    align-items: center;
+  }
+
+  .home-header__container {
+    width: 689px;
+    height: 843px;
+    padding: 60px 58px;
+    flex-direction: column;
+  }
+
+  .home-header__text {
+    margin: 25px 0;
+  }
+
+  .home-header__img {
+    left: 25px;
+    top: 287px;
+  }
 }
